Remove buggy z-index on editing states

--- a/@webwriter/core/model/schemas/resource/plugins/base.css
+++ b/@webwriter/core/model/schemas/resource/plugins/base.css
@@ -317,7 +317,6 @@ html:is(.ww-key-ctrl, .ww-key-meta) body * {
   top: 0;
   left: 0px;
   opacity: 0.25;
-  z-index: 2147483647;
   width: 100%;
   height: 100%;
 }
